--- a/app/src/main/res/menu/news_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/news_bottom_nav_menu.xml
@@ -8,4 +8,8 @@
     <item android:id="@+id/searchNewsFragment"
         android:title="@string/search_news"
         android:icon="@drawable/baseline_search_24"/>
+
+    <item android:id="@+id/saveFragment"
+        android:title="@string/favorited"
+        android:icon="@drawable/baseline_favorite_24"/>
 </menu>
