--- a/app/src/main/res/menu/news_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/news_bottom_nav_menu.xml
@@ -12,4 +12,8 @@
     <item android:id="@+id/saveFragment"
         android:title="@string/favorited"
         android:icon="@drawable/baseline_favorite_24"/>
+
+    <item android:id="@+id/settingsFragment"
+        android:title="@string/settings"
+        android:icon="@drawable/baseline_settings_24"/>
 </menu>
