--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -42,4 +42,8 @@
             android:id="@+id/action_saveFragment_to_articleFragment"
             app:destination="@id/articleFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.e444er.cleanmvvmnewsapp.presentation.settings.SettingsFragment"
+        android:label="SettingsFragment" />
 </navigation>
